# aoc2022

./: Cargo.toml
src/: day1.rs  day10.rs  day11.rs  day11_input.txt  day11_test.txt  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day5_input.txt  day5_test.txt  day6.rs  day7.rs  day8.rs  day9.rs
