[package]
name = "robjtede-aoc2022"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day7"
path = "src/day7.rs"

[[bin]]
name = "day9"
path = "src/day9.rs"

[dependencies]
